--- a/src/layouts/components/global/Footer.astro
+++ b/src/layouts/components/global/Footer.astro
@@ -64,7 +64,7 @@ const encodedEmail = encodeEmail(contact.email);
                     (menu: { name: string; url: string }) => (
                       <li class="inline-block">
                         <a
-                          class="inline-block py-px text-inherit opacity-90 duration-300 hover:text-white"
+                          class="text-link-dark inline-block py-px opacity-90 duration-300"
                           href={getLocaleUrlCTM(menu.url, Astro.currentLocale)}>
                           {menu.name}
                         </a>
@@ -91,7 +91,7 @@ const encodedEmail = encodeEmail(contact.email);
                       (menu: { name: string; url: string }) => (
                         <li class="inline-block">
                           <a
-                            class="inline-block py-px text-inherit opacity-90 duration-300 hover:text-white"
+                            class="text-link-dark inline-block py-px opacity-90 duration-300"
                             href={getLocaleUrlCTM(
                               menu.url,
                               Astro.currentLocale,
@@ -116,7 +116,9 @@ const encodedEmail = encodeEmail(contact.email);
                 <div>
                   <ul class="flex flex-col gap-2">
                     <li class="inline-block">
-                      <a href={`mailto:${contact.email}`}>
+                      <a
+                        class="text-link-dark"
+                        href={`mailto:${contact.email}`}>
                         <span set:html={encodedEmail} />
                       </a>
                     </li>
@@ -137,7 +139,7 @@ const encodedEmail = encodeEmail(contact.email);
             config.settings.copyright && config.settings.copyright.enable && (
               <ul class="has-list has-list-slash prose-a:text-inherit flex flex-wrap gap-y-4 text-white">
                 {copyrightParts.map((value: string) => (
-                  <li class="prose-a:transition-colors prose-a:duration-300 prose-a:text-secondary prose-a:underline-offset-2 prose-a:underline inline-block opacity-90 [&_a:hover]:text-white">
+                  <li class="inline-block opacity-90 [&_a]:text-[var(--color-link-dark-bg)] [&_a]:underline [&_a]:decoration-[1px] [&_a]:underline-offset-2 [&_a]:transition-colors [&_a]:duration-300 [&_a:hover]:text-[var(--color-link-dark-bg-hover)]">
                     <span set:html={markdownify(value)} />
                   </li>
                 ))}
