clean up variables

--- a/src/layouts/components/cards/PricingCard.astro
+++ b/src/layouts/components/cards/PricingCard.astro
@@ -100,7 +100,7 @@ const cardTextClass = featured ? "text-primary" : "text-white/80";
             <span
               class:list={[
                 "pricing-from",
-                { "text-[#3B6A78]": featured },
+                { "text-[var(--color-pricing-from-featured)]": featured },
                 { "text-current/80": !featured },
               ]}>
               from
