add section waves

--- a/src/layouts/components/sections/About.astro
+++ b/src/layouts/components/sections/About.astro
@@ -42,7 +42,7 @@ let {
 
 {
   enable && (
-    <section class="relative py-16 md:py-24" id="about">
+    <section class="relative pt-28 pb-16 md:pt-36 md:pb-20" id="about">
       <div class="container space-y-12 md:space-y-16">
         <div
           class="mx-auto shrink-0 text-center lg:max-w-2xl"
