--- a/src/layouts/components/sections/MeetTheDuo.astro
+++ b/src/layouts/components/sections/MeetTheDuo.astro
@@ -33,7 +33,7 @@ let actualContent = overrideObjects(
 let { title, description, items } = actualContent as meetTheDuoSectionType;
 ---
 
-<section class="relative py-12 md:py-16">
+<section class="relative pt-8 pb-20 md:pt-10 md:pb-28">
   <div class="container mx-auto space-y-8 md:space-y-10">
     <div class="space-y-4 text-left">
       {
