--- a/src/layouts/components/sections/TestimonialSection.astro
+++ b/src/layouts/components/sections/TestimonialSection.astro
@@ -22,13 +22,15 @@ const testimonials = list.filter((t) => t.enable);
 
 {
   enable && (
-    <section class="after:from-primary/0 after:via-primary/30 after:to-primary/0 relative space-y-12 after:pointer-events-none after:absolute after:inset-0 after:-z-10 after:bg-linear-180 md:space-y-16">
+    <section
+      class="section-light testimonial-light relative space-y-12 md:space-y-16"
+      style="background-image: var(--gradient-bg-light);">
       <div class="container">
         <div data-aos="fade-up-sm" class="mx-auto text-center lg:max-w-2xl">
           {subtitle && <Subtitle content={subtitle} />}
           {title && (
             <h2
-              class="section-title has-italic-text capitalize"
+              class="section-title has-italic-text text-monire-deep-teal capitalize"
               set:html={markdownify(title)}
             />
           )}
